# CAlgoLibrary

./: CMakeLists.txt  README.md
include/: calgo.h  container.h  types.h  vector.h
source/: calgo.c  container.c  defines.h  vector.c  vector.cxx  vector.h
source/defs/: vector_defs.c
tests/: CMakeLists.txt
tests/source/: blob.hpp  get_true.cpp  vector.cpp
